# Lite3_simulation

./: .gitignore  .gitmodules  .swp  Dockerfile  README.md  lite3.rviz
scripts/: gazebo_start.sh  install_dependencies.sh  install_ros2_foxy.sh  lite3_rviz.sh  run_ros1_bridge.sh  spawn_robot.sh  stand_up.sh  start_sim.sh  teleop_key.sh
src/Lite3_Model_Control/high_level_sim/src/gazebo_model_spawn/launch/: model_spawn.launch
src/Lite3_Model_Control/high_level_sim/src/gazebo_model_spawn/node/: spawn_model.cpp
src/Lite3_Model_Control/high_level_sim/src/quadruped/src/robots/: qr_robot_lite3_sim.cpp
src/Lite3_Model_Control/high_level_sim/src/robot_description/lite3_description/xacro/: body.xacro  robot_with_lidar.xacro
src/Lite3_Model_Control/high_level_sim/src/run_high_level/: CMakeLists.txt  package.xml
src/Lite3_Model_Control/high_level_sim/src/run_high_level/include/: utils.hpp
src/Lite3_Model_Control/high_level_sim/src/run_high_level/src/: start_simulator.cpp  utils.cpp
